#333 - fix gap in feed tabs (#336)
* feat: add cards variants - rounded, ups and link with ellipse paragraph

* feat: add gaps

* init feed

* feed update

* update featured card

* fix styles

* allow date disable

* update categories with taxonomy

* move taxonomy to its own script file

* fix duplicate style var

* hide categories with no items

* fix #333 - free floating feed tabs

---------

--- a/blocks/feed/feed.css
+++ b/blocks/feed/feed.css
@@ -35,6 +35,7 @@
     justify-content: center;
     gap: 0.5rem;
     padding: 0;
+    margin-bottom: 0;
 }
 
 .feed-tabs-wrapper .feed-tabs-list-desktop li {
